fix video iframe alignment

--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -55,7 +55,6 @@ body.single-collection
   top: 0
   left: 0
   height: 100%
-  justify-content: initial
   display: flex
   flex-wrap: nowrap
 
@@ -64,6 +63,7 @@ body.single-collection
   min-height: 80vh
   max-height: 100%
   width: auto
+  height: auto
 
 .single-collection-video
   width: 80vw
