--- a/css/site.css
+++ b/css/site.css
@@ -2408,10 +2408,6 @@ body.single-collection {
     top: 0;
     left: 0;
     height: 100%;
-    -ms-justify-content: initial;
-    -webkit-box-pack: initial;
-        -ms-flex-pack: initial;
-            justify-content: initial;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2423,6 +2419,7 @@ body.single-collection {
     min-height: 80vh;
     max-height: 100%;
     width: auto;
+    height: auto;
   }
   .single-collection-video {
     width: 80vw;
